docs(jvm-tuning): apply review fixes to jvm-performance-tuning.md
Addresses the documentation findings from the 10-reviewer audit (each fix
re-validated by a 5-agent vote panel):

- Fix factual errors: `train` is not a command (use traineval/crossval/
  eval-predict); config parse uses GroovyShell, not ConfigSlurper.
- Fix broken in-page anchor (#3- slug prefix) and runnable examples
  (real test_data paths instead of big.ds/huge.pdb, add missing -f).
- Reconcile numbers: phase table now sums to 100% and matches the ~95%
  fixed-overhead prose; add a "figures are reference, regenerate them" note.
- Correct AOT statements: matrix script exercises AOT on JDK 25+ (one-step
  -XX:AOTCacheOutput), not 24; prank_faster uses no AOT (move -XX:AOTCache
  out of its flag block into a note; reword the -Xlog:aot aside).
- Scope the version-parse "previously" clause to the stock launchers.
- Add: Windows/prank.bat guidance, -threads batch note, how to confirm CDS
  is active, peak-RSS measurement tip.

Skipped 2 low-value suggestions per the vote (AOT "linked classes" wording
nuance; "four levers" vs "bonus lever" naming).